src/test/ui/borrowck/borrowck-borrowed-uniq-rvalue-2.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-borrowed-uniq-rvalue-2.rs:32:20
   |
LL |     let x = defer(&vec!["Goodbye", "world!"]);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ - temporary value only lives until here
   |                    |
   |                    temporary value does not live long enough
LL |     x.x[0];
   |     ------ borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
